# rams_scoreboard

./: .gitignore  README.md  index.html  package-lock.json  package.json  relay.js  specification  t_and_c.txt  vite.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_server.rs  lib.rs  main.rs  ws_relay.rs
src/lib/: Controller.svelte  Login.svelte  Overlay.svelte  PrivacyPolicy.svelte  Subscribe.svelte  TermsAndConditions.svelte  auth.js  store.js  supabase.js
supabase/.temp/: pooler-url  project-ref
supabase/functions/create-checkout/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/migrations/: 001_subscriptions.sql
